[workspace]
resolver = "2"
members = ["test-context", "test-context-macros"]

[workspace.package]
edition = "2021"
version = "0.5.0"
rust-version = "1.75.0"
homepage = "https://github.com/JasterV/test-context"
repository = "https://github.com/JasterV/test-context"
authors = [
  "Mark Hildreth <mark.k.hildreth@gmail.com>",
  "Victor Martinez <victor.martinez@jaster.xyz>",
]
license = "MIT"
