[package]
name = "test-context-macros"
version = "0.1.4"
edition = "2021"
description = "Macro crate for test-context"
homepage = "https://github.com/JasterV/test-context"
repository = "https://github.com/JasterV/test-context"
authors = [
  "Mark Hildreth <mark.k.hildreth@gmail.com>",
  "Victor Martinez <victor.martinez@jaster.xyz>",
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = { version = "^2", features = ["full"] }
