[package]
name = "test-context-macros"
description = "Macro crate for test-context"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = { version = "^2", features = ["full"] }
proc-macro2 = "1.0.78"
