[package]
name = "test-context"
description = "A library for providing custom setup/teardown for Rust tests without needing a test harness"
readme = "../README.md"
keywords = ["test", "setup", "teardown"]
categories = ["development-tools::testing"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
test-context-macros = { version = "0.4.0", path = "../test-context-macros/" }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
